# omnifocus-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  claude_desktop_config.json  pyproject.toml  renovate.json
.github/workflows/: cd.yml  ci.yml
src/omnifocus_mcp/: __init__.py  applescript_builder.py  cli.py  dates.py  markdown_notes.py  omnijs.py  server.py  tags.py  tools_debug.py  tools_projects.py  tools_tasks.py  utils.py  validation.py
src/omnifocus_mcp/mcp_tools/: __init__.py  response.py
src/omnifocus_mcp/mcp_tools/batch/: __init__.py  batch_add.py  batch_remove.py
src/omnifocus_mcp/mcp_tools/debug/: __init__.py  dump_database.py
src/omnifocus_mcp/mcp_tools/folders/: __init__.py  add_folder.py
src/omnifocus_mcp/mcp_tools/perspectives/: __init__.py  get_perspective_rules.py  get_perspective_view.py  list_perspectives.py
src/omnifocus_mcp/mcp_tools/projects/: __init__.py  add_project.py  browse.py  tree.py
src/omnifocus_mcp/mcp_tools/query/: __init__.py  query.py  search.py
src/omnifocus_mcp/mcp_tools/reorder/: __init__.py  move_helper.py  reorder_tasks.py
src/omnifocus_mcp/mcp_tools/tags/: __init__.py  list_tags.py
src/omnifocus_mcp/mcp_tools/tasks/: __init__.py  add_task.py  edit_item.py  remove_item.py  status_helper.py
src/omnifocus_mcp/scripts/: __init__.py  browse.js  change_task_status.js  dump_database.js  get_perspective_rules.js  get_perspective_view.js  list_perspectives.js  list_tags.js  move_task.js  move_task_to_parent.js  query.js  reorder_tasks.js  search.js  set_note_text.js  tree.js
src/omnifocus_mcp/scripts/common/: field_mappers.js  filters.js  markdown_serializer.js  status_maps.js
tests/: test_applescript_builder.py  test_browse.py  test_cli.py  test_dates.py  test_debug.py  test_markdown_notes.py  test_perspectives.py  test_projects.py  test_reorder.py  test_response.py  test_search.py  test_server.py  test_status_helper.py  test_tasks.py  test_tree.py  test_utils.py
