[project]
name = "omnifocus-mcp"
dynamic = ["version"]
description = "MCP server to interact with OmniFocus in an efficient manner"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "cyclopts>=3.0.0",
]


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-watch>=4.2.0",
]

[project.scripts]
omnifocus-mcp = "omnifocus_mcp.server:main"
omnifocus-cli = "omnifocus_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/omnifocus_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/omnifocus_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
